Fix or suppress all warnings related to deprecated classes and methods or unsafe varargs